# Frednator2

./: .gitignore  .gitignore~  CMakeLists.txt  Makefile  README.md  blob.cpp  controller.cpp  controller.cpp.orig  controller.hpp  frednator.pro  functionsSignatures.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_controller.cxx_parameters  moc_mainwindow.cxx_parameters  moc_videoThread.cxx_parameters  videoThread.cpp  videoThread.cpp.autosave  videoThread.cpp.orig  videoThread.hpp  videoThread.hpp.orig
Arquivos-do-competionCode/behavior/: createBehavior.py
Arquivos-do-competionCode/behavior/include/: Align.hpp  AlignGoal.hpp  Avoid.hpp  BallClose.hpp  BehaviorBase.hpp  FollowBallGoalie.hpp  GmCtrlFinished.hpp  GmCtrlInitial.hpp  GmCtrlPenalized.hpp  GmCtrlPlaying.hpp  GmCtrlReady.hpp  GmCtrlSet.hpp  Kick.hpp  LookAround.hpp  LookForBall.hpp  Sonar.hpp  Start.hpp  TestBehavior.hpp  WalkInit.hpp  WalkRandom.hpp  approachBall.hpp  behaviorGoalie.hpp  behaviorStriker.hpp  faceBall.hpp  includeMapBehavior.hpp  movingAverage.hpp  pickUp.hpp  postKick.hpp  readyTurn.hpp  readyWait.hpp  readyWalk.hpp  roundBall.hpp  sonarLeft.hpp  sonarMiddle.hpp  sonarRight.hpp  staticTest.hpp  teste.hpp  turn.hpp  walkBall.hpp
Arquivos-do-competionCode/behavior/src/: Align.cpp  AlignGoal.cpp  Avoid.cpp  BallClose.cpp  BehaviorBase.cpp  FollowBallGoalie.cpp  GmCtrlFinished.cpp  GmCtrlInitial.cpp  GmCtrlPenalized.cpp  GmCtrlPlaying.cpp  GmCtrlReady.cpp  GmCtrlSet.cpp  Kick.cpp  LookAround.cpp  LookForBall.cpp  Sonar.cpp  Start.cpp  TestBehavior.cpp  WalkInit.cpp  WalkRandom.cpp  approachBall.cpp  behavior.cpp  behaviorGoalie.cpp  behaviorStriker.cpp  faceBall.cpp  movingAverage.cpp  pickUp.cpp  postKick.cpp  readyTurn.cpp  readyWait.cpp  readyWalk.cpp  roundBall.cpp  sonarLeft.cpp  sonarMiddle.cpp  sonarRight.cpp  staticTest.cpp  turn.cpp  walkBall.cpp
Arquivos-do-competionCode/behavior/templates/: tempBehaviorClass.cpp  tempBehaviorClass.hpp  tempincludeMapBehavior.hpp
Arquivos-do-competionCode/common/: RoboCupGameControlData.h  Settings.hpp  chestData.hpp  motionData.hpp
Arquivos-do-competionCode/communication/include/: UdpInterface.hpp  communication.hpp
Arquivos-do-competionCode/communication/src/: UdpInterface.cpp  communication.cpp
Arquivos-do-competionCode/data/etc/naoqi/: autoload.ini
Arquivos-do-competionCode/data/naoqi/: conectaRedes.sh  puredebatata.conf
Arquivos-do-competionCode/data/naoqi/preferences/: autoload.ini
Arquivos-do-competionCode/module/: basemodule.cpp  basemodule.hpp
Arquivos-do-competionCode/motion/data/configs/: robot1.cfg
Arquivos-do-competionCode/motion/data/pos/: stand.pos  standStraight.pos
Arquivos-do-competionCode/motion/include/: motion.hpp
Arquivos-do-competionCode/motion/runswift/gamecontroller/: RoboCupGameControlData.hpp
Arquivos-do-competionCode/motion/runswift/libagent/: libagent.cpp
Arquivos-do-competionCode/motion/runswift/motion/: MotionAdapter.cpp  MotionAdapter.hpp
Arquivos-do-competionCode/motion/runswift/motion/effector/: AgentEffector.cpp
Arquivos-do-competionCode/motion/runswift/motion/generator/: ActionGenerator.cpp  BodyModel.cpp  ClippedGenerator.cpp  DeadGenerator.cpp  DistributedGenerator.cpp  DistributedGenerator.hpp  HeadGenerator.cpp  NullGenerator.cpp  RefPickupGenerator.cpp  StandGenerator.cpp  Walk2014Generator.cpp  WalkEnginePreProcessor.cpp  WalkEnginePreProcessor.hpp
Arquivos-do-competionCode/motion/runswift/motion/touch/: AgentTouch.cpp  FilteredTouch.cpp
Arquivos-do-competionCode/motion/runswift/perception/vision/: Camera.cpp
Arquivos-do-competionCode/motion/runswift/types/: ActionCommand.hpp
Arquivos-do-competionCode/motion/src/: motion.cpp
Arquivos-do-competionCode/perception/include/: ballCandidateANN.hpp  ballDetector.hpp  ballDetector2.hpp  ellipseDetector.hpp  featureDetector.hpp  fieldDetector.hpp  fieldDetector2.hpp  goalDetector.hpp  lineDetector.hpp  perception.hpp  yellowDetector.hpp
Arquivos-do-competionCode/perception/src/: ballCandidateANN.cpp  ballCandidateANN.cpp.autosave  ballDetector.cpp  ballDetector2.cpp  ballDetector2.cpp.autosave  ellipseDetector.cpp  ellipseDetector.cpp.orig  fieldDetector.cpp  fieldDetector.cpp.autosave  fieldDetector.cpp.orig  fieldDetector2.cpp  field_and_goal_detection.cpp  goalDetector.cpp  lineDetector.cpp  perception.cpp  yellowDetector.cpp
Arquivos-do-competionCode/thread/: threadClass.cpp  threadClass.hpp  threadClass.tcc
Arquivos-do-competionCode/unboard/: BehaviorRequest.hpp  unBoard.cpp  unBoard.hpp
Classes-Externas-Ao-CompetionCode/Raphael-NovoBallDetector/: balldetectorrapha.cpp  balldetectorrapha.h
Classes-Externas-Ao-CompetionCode/Raphael-NovoBallDetector/include/: houghCirclesContrast.h  pixelCountCheck.hpp
Classes-Externas-Ao-CompetionCode/Raphael-NovoBallDetector/src/: bhuman_ish.cpp  dilate.cpp  evaluator.cpp  houghCirclesContrast.cpp  pixelCountCheck.cpp  quaternaryMask.cpp  sizeCheck.cpp  testaMetodo.cpp
Funções da perception/include/: ballDetector.hpp  ellipseDetector.hpp  fieldDetector.hpp  goalDetector.hpp  lineDetector.hpp  yellowDetector.hpp
Funções da perception/src/: ballCandidateANN.cpp  ballDetector.cpp  ellipseDetector.cpp  fieldDetector.cpp  goalDetector.cpp  lineDetector.cpp  yellowDetector.cpp
